# avc3t

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/shader/: DefaultShader.shader  DefaultShader_ES.shader  LinesShader.shader  LinesShader_ES.shader
src/avc3t/: Application.cpp  Application.h  main.cpp
src/avc3t/io/: MemoryFile.cpp  MemoryFile.h  MemoryIOStream.cpp  MemoryIOStream.h  MemoryIOSystem.cpp  MemoryIOSystem.h  MemoryIOSystemMounter.cpp  MemoryIOSystemMounter.h
src/avc3t/mesh/: Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h
src/avc3t/render/: FrameBuffer.cpp  FrameBuffer.h  FrameBufferObject.cpp  FrameBufferObject.h  IndexBuffer.cpp  IndexBuffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  RenderBufferObject.cpp  RenderBufferObject.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureBuffer.cpp  TextureBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/avc3t/scene/: Camera.h  EditorCamera.h  Gizmo.h  Grid.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  StaticCamera.h  Transform.h  WiredCube.h
src/avc3t/serialization/: BinaryDeserializer.cpp  BinaryDeserializer.h  BinarySerializer.cpp  BinarySerializer.h  Deserializer.cpp  Deserializer.h  Format.h  IDeserializer.h  ISerializer.h  SerDerConstants.h  SerDerTab.h  Serializer.cpp  Serializer.h  StreamExpect.h  TextDeserializer.cpp  TextDeserializer.h  TextSerializer.cpp  TextSerializer.h  WorkspaceNodeBinaryStore.cpp  WorkspaceNodeBinaryStore.h  WorkspaceNodeSerializeOptions.h
src/avc3t/ui/: EditTextPopup.cpp  EditTextPopup.h  MainMenuBar.cpp  MainMenuBar.h  MouseButton.h  ScenePanel.cpp  ScenePanel.h  TextPopupModal.cpp  TextPopupModal.h  WorkspacePanel.cpp  WorkspacePanel.h
src/avc3t/utils/: BitUtils.h  ID.h  ImGuiUtils.h  Macros.cpp  Macros.h  StringUtils.cpp  StringUtils.h
src/avc3t/workspace/: Workspace.cpp  Workspace.h  WorkspaceButton.h  WorkspaceDrawList.cpp  WorkspaceDrawList.h  WorkspaceElement.cpp  WorkspaceElement.h  WorkspaceHint.h  WorkspaceInput.h  WorkspaceLink.cpp  WorkspaceLink.h  WorkspaceMouseInteraction.h  WorkspaceMouseInteractionResult.h  WorkspacePin.h  WorkspaceRenderContext.h  WorkspaceTextArea.h  WorkspaceTime.h
src/avc3t/workspace/node/: WorkspaceNode.cpp  WorkspaceNode.h  WorkspaceNodeBinder.h  WorkspaceNodeCamera.cpp  WorkspaceNodeCamera.h  WorkspaceNodeEmbeddedObject.cpp  WorkspaceNodeEmbeddedObject.h  WorkspaceNodeExternalObject.cpp  WorkspaceNodeExternalObject.h  WorkspaceNodeSceneObject.cpp  WorkspaceNodeSceneObject.h  WorkspaceNodeStyle.h  WorkspaceNodeText.cpp  WorkspaceNodeText.h  WorkspaceNodeTime.cpp  WorkspaceNodeTime.h  WorkspaceScalableNode.cpp  WorkspaceScalableNode.h
src/avc3t/workspace/node/comparison/: WorkspaceNodeCmpEqual.cpp  WorkspaceNodeCmpEqual.h  WorkspaceNodeCmpNotEqual.cpp  WorkspaceNodeCmpNotEqual.h  WorkspaceNodeCmpSmaller.cpp  WorkspaceNodeCmpSmaller.h  WorkspaceNodeCmpSmallerEqual.cpp  WorkspaceNodeCmpSmallerEqual.h
src/avc3t/workspace/node/conversion/float/: WorkspaceNodeConvFloatToMat4.cpp  WorkspaceNodeConvFloatToMat4.h  WorkspaceNodeConvFloatToQuat.cpp  WorkspaceNodeConvFloatToQuat.h  WorkspaceNodeConvFloatToVec3.cpp  WorkspaceNodeConvFloatToVec3.h  WorkspaceNodeConvFloatToVec4.cpp  WorkspaceNodeConvFloatToVec4.h
src/avc3t/workspace/node/conversion/mat4/: WorkspaceNodeConvMat4ToFloat.cpp  WorkspaceNodeConvMat4ToFloat.h  WorkspaceNodeConvMat4ToQuat.cpp  WorkspaceNodeConvMat4ToQuat.h  WorkspaceNodeConvMat4ToVec4.cpp  WorkspaceNodeConvMat4ToVec4.h
src/avc3t/workspace/node/logical/: WorkspaceNodeBoolAnd.cpp  WorkspaceNodeBoolAnd.h  WorkspaceNodeBoolNot.cpp  WorkspaceNodeBoolNot.h  WorkspaceNodeBoolOr.cpp  WorkspaceNodeBoolOr.h  WorkspaceNodeBoolValue.cpp  WorkspaceNodeBoolValue.h  WorkspaceNodeBoolXor.cpp  WorkspaceNodeBoolXor.h  WorkspaceNodePick.cpp  WorkspaceNodePick.h
src/avc3t/workspace/node/operator/: WorkspaceNodeFloatAdd.cpp  WorkspaceNodeFloatAdd.h  WorkspaceNodeFloatDivide.cpp  WorkspaceNodeFloatDivide.h  WorkspaceNodeFloatMultMat4.cpp  WorkspaceNodeFloatMultMat4.h  WorkspaceNodeFloatMultQuat.cpp  WorkspaceNodeFloatMultQuat.h  WorkspaceNodeFloatMultVec3.cpp  WorkspaceNodeFloatMultVec3.h  WorkspaceNodeFloatMultVec4.cpp  WorkspaceNodeFloatMultVec4.h  WorkspaceNodeFloatMultiply.cpp  WorkspaceNodeFloatMultiply.h  WorkspaceNodeFloatPower.cpp  WorkspaceNodeFloatPower.h  WorkspaceNodeFloatSubstract.cpp  WorkspaceNodeFloatSubstract.h  WorkspaceNodeMat4Add.cpp  WorkspaceNodeMat4Add.h  WorkspaceNodeMat4Mult.cpp  WorkspaceNodeMat4Mult.h  WorkspaceNodeMat4MultVec4.cpp  WorkspaceNodeMat4MultVec4.h  WorkspaceNodeMat4Substract.cpp  WorkspaceNodeMat4Substract.h  WorkspaceNodeQuatMult.cpp  WorkspaceNodeQuatMult.h  WorkspaceNodeVec3Add.cpp  WorkspaceNodeVec3Add.h  WorkspaceNodeVec3Dot.cpp  WorkspaceNodeVec3Dot.h  WorkspaceNodeVec3Multiply.cpp  WorkspaceNodeVec3Multiply.h  WorkspaceNodeVec3Substract.cpp  WorkspaceNodeVec3Substract.h  WorkspaceNodeVec4Add.cpp  WorkspaceNodeVec4Add.h  WorkspaceNodeVec4Dot.cpp  WorkspaceNodeVec4Dot.h  (+4 more)
src/avc3t/workspace/node/projection/: WorkspaceNodeProjFrustum.cpp  WorkspaceNodeProjFrustum.h  WorkspaceNodeProjOrtho.cpp  WorkspaceNodeProjOrtho.h  WorkspaceNodeProjPerspective.cpp  WorkspaceNodeProjPerspective.h
src/avc3t/workspace/node/transformation/: WorkspaceNodeTransfLookAt.cpp  WorkspaceNodeTransfLookAt.h  WorkspaceNodeTransfRotationVector.cpp  WorkspaceNodeTransfRotationVector.h  WorkspaceNodeTransfRotationX.cpp  WorkspaceNodeTransfRotationX.h  WorkspaceNodeTransfRotationY.cpp  WorkspaceNodeTransfRotationY.h  WorkspaceNodeTransfRotationZ.cpp  WorkspaceNodeTransfRotationZ.h  WorkspaceNodeTransfScale.cpp  WorkspaceNodeTransfScale.h  WorkspaceNodeTransfTransl.cpp  WorkspaceNodeTransfTransl.h
src/avc3t/workspace/node/value/: WorkspaceNodeFloatValue.cpp  WorkspaceNodeFloatValue.h  WorkspaceNodeMat4Value.cpp  WorkspaceNodeMat4Value.h  WorkspaceNodeQuatValue.cpp  WorkspaceNodeQuatValue.h  WorkspaceNodeVec3Value.cpp  WorkspaceNodeVec3Value.h  WorkspaceNodeVec4Value.cpp  WorkspaceNodeVec4Value.h
(+84 files in other folders)
